--- a/rebar.config
+++ b/rebar.config
@@ -1,1 +1,6 @@
 {sub_dirs, ["apps/skel", "apps/skelnode", "rel"]}.
+{deps_dir, ["deps"]}.
+{deps, [
+  {lager, ".*", {git, "git://github.com/basho/lager.git"}},
+  {eredis, ".*", {git, "git://github.com/wooga/eredis.git"}},
+  {cowboy, ".*", {git, "git://github.com/extend/cowboy.git"}} ]}.
