--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,7 +1,7 @@
 %% -*- mode: erlang -*-
 %% ex: ft=erlang
 {sys, [
-       {lib_dirs, ["../apps"]},
+       {lib_dirs, ["../apps", "../deps"]},
        {erts, [{mod_cond, derived}, {app_file, strip}]},
        {app_file, strip},
        {rel, "skelnode", "1",
@@ -9,6 +9,9 @@
          kernel,
          stdlib,
          sasl,
+         crypto,
+         ranch,
+         cowboy,
          skelnode,
          skel
         ]},
@@ -24,6 +27,8 @@
        {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
+       {app, ranch, [{mod_cond, app}, {incl_cond, include}]},
+       {app, cowboy, [{mod_cond, app}, {incl_cond, include}]},
        {app, skelnode, [{mod_cond, app}, {incl_cond, include}]},
        {app, skel, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
