excluded hipe owing to weird error from reltool

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -30,7 +30,8 @@
        {app, ranch, [{mod_cond, app}, {incl_cond, include}]},
        {app, cowboy, [{mod_cond, app}, {incl_cond, include}]},
        {app, skelnode, [{mod_cond, app}, {incl_cond, include}]},
-       {app, skel, [{mod_cond, app}, {incl_cond, include}]}
+       {app, skel, [{mod_cond, app}, {incl_cond, include}]},
+       {app, hipe, [{incl_cond, exclude}]}
       ]}.
 
 {target_dir, "skelnode"}.
