--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -31,6 +31,7 @@
        {app, cowboy, [{mod_cond, app}, {incl_cond, include}]},
        {app, skelnode, [{mod_cond, app}, {incl_cond, include}]},
        {app, skel, [{mod_cond, app}, {incl_cond, include}]},
+       {app, observer, [{incl_cond, include}]},
        {app, hipe, [{incl_cond, exclude}]}
       ]}.
 
